--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React webpack Test</title>
+    <title>React Webpack Boilerplate</title>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
 </html>
